--- a/themes/WP-Custom-Theme/assets/scss/components/_shape.scss
+++ b/themes/WP-Custom-Theme/assets/scss/components/_shape.scss
@@ -4,7 +4,7 @@
 
 .shape {
 	width: 212px;
-	height: 112px;
+	height: 114px;
 
 	@include responsive-down($r-tablet) {
 		width: 114px;
