--- a/themes/WP-Custom-Theme/assets/scss/components/_wrapper.scss
+++ b/themes/WP-Custom-Theme/assets/scss/components/_wrapper.scss
@@ -8,5 +8,4 @@
 		flex-direction: column;
 		justify-content: space-between;
 		min-height: 100vh;
-		overflow: hidden;
 }
